--- a/portfolio.html
+++ b/portfolio.html
@@ -153,28 +153,28 @@
         <p class="footer-title">Social Media
         </p>
         <ul class="footer-list list">
-          <li class="footer-icon">
+          <li class="footer-item">
             <a class="footer-link">
               <svg width="24px" height="24px">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
-          <li class="footer-icon">
+          <li class="footer-item">
             <a class="footer-link">
               <svg width="24px" height="24px">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
-          <li class="footer-icon">
+          <li class="footer-item">
             <a class="footer-link">
               <svg width="24px" height="24px">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
-          <li class="footer-icon">
+          <li class="footer-item">
             <a class="footer-link">
               <svg width="24px" height="24px">
                 <use href="./images/icons.svg#icon-linkedin"></use>
