--- a/index.html
+++ b/index.html
@@ -294,42 +294,42 @@
           <div class="container">
             <h2 class="about-title">Customers</h2>
               <ul class="company list">
-                <li class="company-icon">
+                <li class="company-item">
                   <a href="" class="company-link">
                     <svg width="41px" height="47px">
                       <use href="./images/icons.svg#icon-ya-co"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="company-icon">
+                <li class="company-item">
                   <a href="" class="company-link">
                     <svg width="40px" height="52px">
                       <use href="./images/icons.svg#icon-tag"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="company-icon">
+                <li class="company-item">
                   <a href="" class="company-link">
                     <svg width="44px" height="41px">
                       <use href="./images/icons.svg#icon-company"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="company-icon">
+                <li class="company-item">
                   <a href="" class="company-link">
                     <svg width="84px" height="41px">
                       <use href="./images/icons.svg#icon-foster"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="company-icon">
+                <li class="company-item">
                   <a href="" class="company-link">
                     <svg width="63px" height="45px">
                       <use href="./images/icons.svg#icon-brand"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="company-icon">
+                <li class="company-item">
                   <a href="" class="company-link">
                     <svg width="94px" height="44px">
                       <use href="./images/icons.svg#icon-tagline"></use>
