--- a/index.html
+++ b/index.html
@@ -293,45 +293,45 @@
         <section class="customers section">
           <div class="container">
             <h2 class="about-title">Customers</h2>
-              <ul class="company list">
-                <li class="company-item">
-                  <a href="" class="company-link">
-                    <svg width="41px" height="47px">
+              <ul class="customers-list list">
+                <li class="customers-item">
+                  <a href="" class="customers-link link">
+                    <svg  width="104px" height="56px">
                       <use href="./images/icons.svg#icon-ya-co"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="company-item">
-                  <a href="" class="company-link">
-                    <svg width="40px" height="52px">
+                <li class="customers-item">
+                  <a href="" class="customers-link link">
+                    <svg width="104px" height="56px">
                       <use href="./images/icons.svg#icon-tag"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="company-item">
-                  <a href="" class="company-link">
-                    <svg width="44px" height="41px">
+                <li class="customers-item">
+                  <a href="" class="customers-link link">
+                    <svg width="104px" height="56px">
                       <use href="./images/icons.svg#icon-company"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="company-item">
-                  <a href="" class="company-link">
-                    <svg width="84px" height="41px">
+                <li class="customers-item">
+                  <a href="" class="customers-link link">
+                    <svg width="104px" height="56px">
                       <use href="./images/icons.svg#icon-foster"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="company-item">
-                  <a href="" class="company-link">
-                    <svg width="63px" height="45px">
+                <li class="customers-item">
+                  <a href="" class="customers-link link">
+                    <svg width="104px" height="56px">
                       <use href="./images/icons.svg#icon-brand"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="company-item">
-                  <a href="" class="company-link">
-                    <svg width="94px" height="44px">
+                <li class="customers-item">
+                  <a href="" class="customers-link link">
+                    <svg width="104px" height="56px">
                       <use href="./images/icons.svg#icon-tagline"></use>
                     </svg>
                   </a>
@@ -355,28 +355,28 @@
           </p>
           <ul class="footer-list list">
             <li class="footer-item">
-              <a class="footer-link">
+              <a href="" class="footer-link">
                 <svg width="24px" height="24px">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
-              <a class="footer-link">
+              <a href="" class="footer-link">
                 <svg width="24px" height="24px">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
-              <a class="footer-link">
+              <a href="" class="footer-link">
                 <svg width="24px" height="24px">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
-              <a class="footer-link">
+              <a href="" class="footer-link">
                 <svg width="24px" height="24px">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
